...
                        }
                        Button(action: {
                            self.selection = 3
                            self.mood = "Okay"
                        }) {
                            Image("mood_okay").renderingMode(.original).resizable().scaledToFit().frame(height: 100)
                        }.accessibility(identifier: "okayButton")
                    }
                }
                HStack{
                    VStack {
                        NavigationLink(destination: RecordingView(audioRecorder: AudioRecorder()), tag: 2, selection: self.$selection){
                            Text("")
...
